objects/EUR_CRM_Territory__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsOwnerChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOwnerChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_KD_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country:
NG</description>
        <label>KD Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_User_KD_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Off_Trade_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country:
NG</description>
        <label>Off Trade Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_User_Off_Trade_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_On_Trade_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country:
NG</description>
        <label>On Trade Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_User_On_Trade_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region__c</fullName>
        <label>Region</label>
        <referenceTo>EUR_CRM_Region__c</referenceTo>
        <relationshipName>Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Territory_Channel__c</fullName>
        <formula>TEXT(EUR_CRM_Region__r.EUR_CRM_Channel__c)</formula>
        <label>Territory Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Territory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory (EU)</label>
    <listViews>
        <fullName>EUR_AO_Territory</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_Territory_Channel__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_AO_Territory</value>
        </filters>
        <label>EUR AO Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_All_Territory_View</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_IsOwnerChanged__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_BE_Territory</value>
        </filters>
        <label>EUR BE All Territory View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_Territory_View</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_IsOwnerChanged__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_BG_Territory</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>BGN</value>
        </filters>
        <label>EUR BG Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_Territory</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_CH_Territory</value>
        </filters>
        <label>EUR CH Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_Territory</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_DE_Territory</value>
        </filters>
        <label>EUR DE Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Territory</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_DK_Territory</value>
        </filters>
        <label>EUR DK Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Territory</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_GB_Territory</value>
        </filters>
        <label>EUR GB Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_KE_Territory</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_Territory_Channel__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_KE_Territory</value>
        </filters>
        <label>EUR KE Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_KE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_LT_Territory</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_Territory_Channel__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_LT_Territory</value>
        </filters>
        <label>EUR LT Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_LT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Territory</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_On_Trade_Owner__c</columns>
        <columns>EUR_CRM_Off_Trade_Owner__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_MA_Territory</value>
        </filters>
        <label>EUR MA Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Territory</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_On_Trade_Owner__c</columns>
        <columns>EUR_CRM_KD_Owner__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_CRM_NG_Territory</value>
        </filters>
        <label>EUR NG Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Territory_Lagos_Mainland</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_On_Trade_Owner__c</columns>
        <columns>EUR_CRM_KD_Owner__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_CRM_NG_Territory</value>
        </filters>
        <filters>
            <field>EUR_CRM_Region__c</field>
            <operation>equals</operation>
            <value>Lagos Mainland</value>
        </filters>
        <label>EUR NG Territory Lagos Mainland</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Territory_Lagos_Mainland_Demola</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_On_Trade_Owner__c</columns>
        <columns>EUR_CRM_KD_Owner__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_CRM_NG_Territory</value>
        </filters>
        <filters>
            <field>EUR_CRM_Region__c</field>
            <operation>equals</operation>
            <value>Lagos Mainland</value>
        </filters>
        <filters>
            <field>EUR_CRM_KD_Owner__c</field>
            <operation>equals</operation>
            <value>Demola Badmus</value>
        </filters>
        <label>EUR NG Territory Lagos Mainland Demola</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PT_Territory</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_PT_Territory</value>
        </filters>
        <label>EUR PT Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Territory</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Territory_Owner__c</columns>
        <columns>EUR_CRM_Territory_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_RU_OFF_Trade_Territory</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_RU_ON_OFF_Trade_Territory</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Territory__c.EUR_RU_ON_Trade_Territory</value>
        </filters>
        <label>EUR RU Territory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Territory</fullName>
        <active>true</active>
        <label>AO Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Territory</fullName>
        <active>true</active>
        <label>EUR BE Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Territory</fullName>
        <active>true</active>
        <label>EUR BG Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Territory</fullName>
        <active>true</active>
        <label>EUR CH Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_NG_Territory</fullName>
        <active>true</active>
        <label>NG Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Territory</fullName>
        <active>true</active>
        <description>EUR DE Territory</description>
        <label>DE Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Territory</fullName>
        <active>true</active>
        <description>Record Type for DK Territories</description>
        <label>EUR DK Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Territory</fullName>
        <active>true</active>
        <description>EUR EE Territory</description>
        <label>EE Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Territory</fullName>
        <active>true</active>
        <label>FI Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Territory</fullName>
        <active>true</active>
        <label>GB Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Territory</fullName>
        <active>true</active>
        <label>KE Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Territory</fullName>
        <active>true</active>
        <description>EUR LT Territory</description>
        <label>LT Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Territory</fullName>
        <active>true</active>
        <description>EUR LV Territory</description>
        <label>LV Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Territory</fullName>
        <active>true</active>
        <label>EUR MA Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Territory</fullName>
        <active>true</active>
        <label>EUR PT Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_OFF_Trade_Territory</fullName>
        <active>true</active>
        <label>EUR RU OFF Trade Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_ON_OFF_Trade_Territory</fullName>
        <active>true</active>
        <label>EUR RU ON &amp; OFF Trade Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_ON_Trade_Territory</fullName>
        <active>true</active>
        <label>EUR RU ON Trade Territory</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>